--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-
-    <title>Hello, world!</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h2>Its Patrick</h2>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
