--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="Content">
-      <h1>Patrick Bald</h1>
+      <h1 class="header text-center">Patrick Bald</h1>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
