--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   </head>
   <body>
     <div id="Content">
+      <div class="background">
+        <img src="profile_image.jpg">
+        <p>test text</p>
+      </div>
       <h1 class="header text-center">Patrick Bald</h1>
     </div>
     <!-- Optional JavaScript -->
