--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="Content">
       <div class="background">
-        <img src="profile_image.jpg">
+        <img src="profile_image.jpg" style="width: 50%">
         <p>test text</p>
       </div>
       <h1 class="header text-center">Patrick Bald</h1>
